# rill-ml

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDLER-RFC.md  LICENSE-MIT  README.en.md  README.md  RELIABILITY.md  ROADMAP.md  RUNTIME.md  RUNTIME_HANDLER_PLUGIN_PLAN.md  RillML_AI_IDE_Prompt_Final(1).md  RillML_Roadmap(1).md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  docs.yml  model-release.yml  pipeline.yml  release-check.yml  release.yml  runtime-release.yml  security.yml
benches/: online_models.rs  online_stats.rs
crates/rill-handler-api/: Cargo.toml
crates/rill-handler-api/src/: lib.rs
crates/rill-handler-api/wit/: rill-handler.wit
crates/rill-ml-arrow/: Cargo.toml
crates/rill-ml-arrow/src/: lib.rs
crates/rill-ml-arrow/tests/: arrow_roundtrip.rs
crates/rill-ml-polars/: Cargo.toml
crates/rill-ml-polars/src/: lib.rs
crates/rill-ml-polars/tests/: polars_roundtrip.rs
crates/rill-ml-python/: Cargo.toml  pyproject.toml
crates/rill-ml-python/src/: lib.rs
crates/rill-ml-python/tests/: test_python_api.py
crates/rill-ml-tokio/: Cargo.toml
crates/rill-ml-tokio/examples/: stream_demo.rs
crates/rill-ml-tokio/src/: lib.rs
crates/rill-ml-tokio/tests/: stream_eval.rs
crates/rill-ml-wasm/: Cargo.toml
crates/rill-ml-wasm/src/: lib.rs
crates/rill-ml-wasm/tests/: host_compile_check.rs  wasm_api.rs
crates/rill-runtime/: Cargo.toml
crates/rill-runtime-protocol/: Cargo.toml
crates/rill-runtime-protocol/src/: lib.rs
crates/rill-runtime/src/: archive.rs  battery.rs  handler_package.rs  lib.rs  package.rs  server.rs
crates/rill-runtime/src/handler/: builtin.rs  mod.rs  wasm.rs
crates/rill-runtime/tests/: runtime_process.rs  wasm_handler.rs
crates/rillml-inspect/: Cargo.toml
crates/rillml-inspect/src/: main.rs
crates/rillml-inspect/tests/: cli_inspect.rs
examples/: bandit_demo.rs  diagnostics_demo.rs  drift_demo.rs  online_classification.rs  online_regression.rs  progressive_validation.rs  sensor_stream.rs  sparse_classification.rs
handlers/echo-handler/: Cargo.toml  manifest.json
handlers/echo-handler/src/: main.rs
handlers/test-malicious-handler/: Cargo.toml
handlers/test-malicious-handler/src/: main.rs
models/example-default/: manifest.json  model.json
models/mira-battery-default/: manifest.json  model.json
scripts/: build-release-index.py  release_version.py  sync_version.py  update-model-release-index.py  verify-release-assets.py
scripts/tests/: test_release_indexes.py  test_release_version.py
src/: error.rs  feature_hasher.rs  lib.rs  persistence.rs  pipeline.rs  traits.rs
src/bandit/: epsilon_greedy.rs  linucb.rs  mod.rs  stats.rs  thompson.rs  ucb1.rs
src/diagnostics/: baseline_comparator.rs  mod.rs  model_health.rs  model_selector.rs  prediction_interval.rs  prediction_report.rs  training_summary.rs  warmup.rs
src/drift/: action.rs  adwin.rs  aware_model.rs  decay.rs  detector.rs  kswin.rs  mod.rs  page_hinkley.rs  strategy.rs
src/evaluate/: mod.rs  progressive.rs
src/loss/: huber.rs  log_loss.rs  mod.rs  squared.rs
src/metrics/: classification.rs  mod.rs  regression.rs  rolling.rs
src/models/: baseline.rs  ftrl.rs  linear_regression.rs  logistic_regression.rs  mod.rs  naive_bayes.rs
src/optim/: adagrad.rs  mod.rs  sgd.rs
src/preprocessing/: clipper.rs  constant_imputer.rs  forward_fill.rs  frequency.rs  mean_imputer.rs  min_max_scaler.rs  missing_indicator.rs  mod.rs  one_hot.rs  ordinal.rs  standard_scaler.rs
src/sparse/: mod.rs
src/stats/: count.rs  ew_mean.rs  extrema.rs  mean.rs  mod.rs  rolling.rs  sum.rs  variance.rs
tests/: bandit_learning.rs  classification_learning.rs  drift_detection.rs  ftrl_learning.rs  naive_bayes.rs  pipeline_behavior.rs  progressive_order.rs  regression_learning.rs  serialization.rs  sparse_features.rs  stats_reference.rs
