[package]
name = "rill-ml"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Lightweight, serializable online machine learning for Rust applications and streaming data."
repository = "https://github.com/hello-yunshu/rill-ml"
documentation = "https://docs.rs/rill-ml"
readme = "README.md"
keywords = ["machine-learning", "online-learning", "streaming", "incremental", "edge"]
categories = ["algorithms", "science"]
exclude = [".github/"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
approx = "0.5"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[lib]
name = "rill_ml"
path = "src/lib.rs"

[[example]]
name = "online_regression"
required-features = ["serde"]

[[example]]
name = "sensor_stream"

[[example]]
name = "online_classification"

[[example]]
name = "progressive_validation"

[[example]]
name = "diagnostics_demo"

[[example]]
name = "sparse_classification"

[[example]]
name = "drift_demo"

[[bench]]
name = "online_stats"
harness = false

[[bench]]
name = "online_models"
harness = false

[profile.bench]
lto = true
codegen-units = 1
