[package]
name = "rill-ml"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Lightweight, serializable online machine learning for Rust applications and streaming data."
repository = "https://github.com/hello-yunshu/rill-ml"
documentation = "https://docs.rs/rill-ml"
readme = "README.md"
keywords = ["machine-learning", "online-learning", "streaming", "incremental", "edge"]
categories = ["algorithms", "science"]
exclude = [".github/"]

[workspace]
resolver = "3"
members = [
    "crates/rill-handler-api",
    "crates/rill-runtime-protocol",
    "crates/rill-runtime",
    "crates/rill-ml-tokio",
    "crates/rill-ml-arrow",
    "crates/rill-ml-polars",
    "crates/rillml-inspect",
    "crates/rill-ml-wasm",
    "crates/rill-ml-python",
]
exclude = [
    "handlers/echo-handler",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/hello-yunshu/rill-ml"

[workspace.dependencies]
ed25519-dalek = "3.0.0"
hex = "0.4"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = "0.1"
arrow = "55"
polars = { version = "0.46", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
pyo3 = { version = "0.29", features = ["extension-module"] }
clap = { version = "4.5", features = ["derive"] }
wasmtime = { version = "27", default-features = false, features = ["cranelift", "component-model", "runtime", "parallel-compilation"] }

[features]
default = ["bandit"]
bandit = ["dep:rand"]
serde = ["dep:serde"]

[dependencies]
thiserror = "1.0"
rand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
approx = "0.5"
proptest = "1.0"
rand_chacha = "0.3"
serde_json = "1.0"
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[lib]
name = "rill_ml"
path = "src/lib.rs"

[[example]]
name = "online_regression"
required-features = ["serde"]

[[example]]
name = "sensor_stream"

[[example]]
name = "online_classification"

[[example]]
name = "progressive_validation"

[[example]]
name = "diagnostics_demo"

[[example]]
name = "sparse_classification"

[[example]]
name = "drift_demo"

[[example]]
name = "bandit_demo"

[[bench]]
name = "online_stats"
harness = false

[[bench]]
name = "online_models"
harness = false

[profile.bench]
lto = true
codegen-units = 1
