[package]
name = "rill-ml-polars"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Polars DataFrame conversion helpers for RillML."

[dependencies]
rill-ml = { workspace = true }
polars = { workspace = true, features = ["dtype-full"] }
thiserror = { workspace = true }

[lib]
name = "rill_ml_polars"
path = "src/lib.rs"
