[package]
name = "rill-ml-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for RillML via PyO3."

[lib]
name = "rill_ml_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
rill-ml = { workspace = true, features = ["serde"] }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
