[package]
name = "rill-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Signed-model local runtime and IPC server for RillML."

[lib]
name = "rill_runtime"
path = "src/lib.rs"

[[bin]]
name = "rill-runtime"
path = "src/bin/rill-runtime.rs"

[[bin]]
name = "rill-pack"
path = "src/bin/rill-pack.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek.workspace = true
hex.workspace = true
rill-ml = { path = "../..", features = ["serde"] }
rill-runtime-protocol = { path = "../rill-runtime-protocol" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile = "3"
