[package]
name = "rillml-inspect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Inspect RillML snapshots, model state, and version info."

[[bin]]
name = "rillml-inspect"
path = "src/main.rs"

[dependencies]
rill-ml = { version = "0.6.0", path = "../..", features = ["serde"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
